# btle-libp2p-research

./: LICENSE  README.md
ble-network-upgrade/: Cargo.toml  DEMO.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  WHY_BLE_MATTERS.md
ble-network-upgrade/src/: apple_ble.rs  ble.rs  identity.rs  main.rs  multipeer.rs  protocol.rs  transport.rs
ble-upgrade/: Cargo.toml
ble-upgrade/src/: lib.rs
ble-upgrade/src/btle/: btleplug.rs  mod.rs  types.rs
btle-shutdown-sim/: README.md
btle-shutdown-sim/testground/: manifest.toml
btle-shutdown-sim/testground/compositions/: shutdown-mesh.toml
btle-shutdown-sim/testground/plans/shutdown-mesh/: go.mod  main.go
