[package]
name = "ble-network-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = {version = "1", features = ["full"]}
libp2p = {version = "0.51", features=[]}
btleplug = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-core-bluetooth = { version = "0.3.2", features = ["CBAdvertisementData", "CBPeripheralManager", "CBPeripheralManagerConstants", "CBUUID"] }
objc2-multipeer-connectivity = "0.3.2"
ble-peripheral-rust = "0.2.0"
uuid = "1.23.0"
