[package]
name = "ble-upgrade"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
futures = "*"
tokio = {version = "*", features = ["full"]}
libp2p ={ version = "*", features = []}
btleplug ={ version = "0.12.0"}
objc2-multipeer-connectivity ={ version = "*"}
objc2-foundation ="*"
objc2="*"
